--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,282 @@
 .ex-1-square {
-    width: 100px;
-    height: 100px;
-    border: 1px solid red;
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
+  transition: 5s;
 }
+
+.ex-1-square:hover {
+  background-color: red;
+}
+
 .ex-2-square {
-    width: 100px;
-    height: 100px;
-    background: red;
+  width: 100px;
+  height: 100px;
+  background: red;
+  transition: width 5s ease-in-out;
 }
+
+.ex-2-square:active {
+  width: 100%;
+}
+
 .ex-3-square {
-    width: 100px;
-    height: 100px;
-    background: red;
+  width: 100px;
+  height: 100px;
+  background: red;
+  transition: 2s cubic-bezier(0, 1.3, 1, 0.06);
 }
+
+.ex-3-square:hover {
+  border-radius: 50%;
+}
+
+@keyframes dissolvimento {
+  0% {
+    opacity: 1;
+  }
+  
+  100% {
+    opacity: 0;
+  }
+}
+
 .ex-4-square {
-    width: 100px;
-    height: 100px;
-    background: red;
+  width: 100px;
+  height: 100px;
+  background: red;
+  animation-name: dissolvimento;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+
 }
+
 .ex-5-square {
-    margin: 20px;
-    width: 60px;
-    height: 60px;
-    background: red;
+  margin: 20px;
+  width: 60px;
+  height: 60px;
+  background: red;
+  transition: width 3s, height 3s;
 }
-.ex-6-img, .ex-7-img, .ex-8-img {
-    width: 500px;
+
+.ex-5-square:hover {
+  width: 120px;
+  height: 120px;
+}
+
+.ex-5-square:active {
+  width: 30px;
+  height: 30px;
+}
+
+.ex-6-img,
+.ex-7-img,
+.ex-8-img {
+  width: 500px;
+  transition: 3.5s;
+}
+
+.ex-6-img:hover {
+  filter: grayscale(1);
+}
+
+.ex-7-img:hover {
+  filter: blur(2px) drop-shadow(3px 3px 6px black);
+}
+
+.ex-8-img:active {
+  filter: invert() saturate(4);
+  border-radius: 2.5rem;
 }
 
 .ex-9-img {
-    margin: 50px 100px;
-    width: 400px;
+  margin: 50px 100px;
+  width: 400px;
+  transition: border-radius 4s ease-out, filter 5s ease-in-out, width 6s;
 }
+
+.ex-9-img:hover {
+  border-radius: 3rem;
+  filter: hue-rotate(120deg) brightness(200%);
+  width: 600px;
+}
+
 .ex-10-icon {
-    font-size: 60px;
+  font-size: 60px;
+  animation-name: spin;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .ex-11-icon {
-    font-size: 60px;
+  font-size: 60px;
 }
-.ex-12-button, .ex-13-button {
-    position: relative;
-    display: block;
-    width: 200px;
-    height: 70px;
-    text-transform: uppercase;
-    border: 3px solid #1b3c59;
-    color: #1b3c59;
-    font-size: 20px;
-    line-height: 70px;
-    text-align: center;
-    text-decoration: none;
+
+@keyframes back {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  80% {
+    transform: rotate(250deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
 }
-.ex-12-top-white, .ex-13-top-white {
-    position: absolute;
-    top: -10px;
-    left: 10%;
-    background: #f5f5f5;
-    width: 60px;
-    height: 20px;
+
+.ex-11-icon:hover {
+  animation-name: back;
+  animation-duration: 2s;
 }
-.ex-12-bottom-white, .ex-13-bottom-white {
-    position: absolute;
-    bottom: -10px;
+
+.ex-12-button,
+.ex-13-button {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 70px;
+  text-transform: uppercase;
+  border: 3px solid #1b3c59;
+  color: #1b3c59;
+  font-size: 20px;
+  line-height: 70px;
+  text-align: center;
+  text-decoration: none;
+}
+.ex-12-top-white,
+.ex-13-top-white {
+  position: absolute;
+  top: -10px;
+  left: 10%;
+  background: #f5f5f5;
+  width: 60px;
+  height: 20px;
+}
+.ex-12-bottom-white,
+.ex-13-bottom-white {
+  position: absolute;
+  bottom: -10px;
+  right: 20%;
+  background: #f5f5f5;
+  width: 60px;
+  height: 20px;
+}
+
+.ex-12-bottom-white {
+  animation-name: animato-bot;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes animato-bot {
+  0% {
     right: 20%;
-    background: #f5f5f5;
-    width: 60px;
-    height: 20px;
+  }
+
+  100% {
+    right: 60%;
+  }
+}
+
+.ex-12-top-white {
+  animation-name: animato-top;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes animato-top {
+  0% {
+    left: 10%;
+  }
+
+  100% {
+    left: 60%;
+  }
+}
+
+.ex-13-top-white {
+  animation-name: animato-t;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes animato-t {
+  0% {
+    left: 10%;
+  }
+
+  20% {
+    left: 100%;
+    top: -10px;
+  }
+
+  40% {
+    left: 100%;
+    top: 50px;
+  }
+
+  60% {
+    left: -10%;
+    top: 50px;
+  }
+
+  80% {
+    left: -10%;
+    top: -10px;
+  }
+
+  100% {
+    left: 20%;
+    top: -10px;
+  }
+}
+
+.ex-13-bottom-white {
+  animation-name: animato-b;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes animato-b {
+  0% {
+    right: 20%;
+    bottom: -10px;
+  }
+
+  20% {
+    right: 80%;
+    bottom: -10px;
+  }
+
+  40% {
+    right: 80%;
+    bottom: 50px;
+  }
+
+  60% {
+    right: -10%;
+    bottom: 50px;
+  }
+
+  80% {
+    right: -10%;
+    bottom: -10px;
+  }
+
+  
 }
